something of html and css

--- a/cheftravel/views/index.erb
+++ b/cheftravel/views/index.erb
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bienvenido a ChefTravel</title>
-    <style>
-      form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-      }
-    </style>
+    <title>ChefTravel</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
     <h1>Bienvenido a ChefTravel</h1>
