--- a/cheftravel/views/index.erb
+++ b/cheftravel/views/index.erb
@@ -5,7 +5,20 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
+  
+  <style>
+        
+    img {
+      max-width: 400px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    }
+    
+  
+  </style>
+
     <h1>Bienvenido a ChefTravel</h1>
+    <img src="RUTA" border="1" width="300" height="200">
     <p>Inserte su nombre y clave para ingresar o crear su usuario</p>
     <form action="/users" method="POST">
       <input type="text" name="name" placeholder="Nombre">
