--- a/cheftravel/views/menu.erb
+++ b/cheftravel/views/menu.erb
@@ -21,9 +21,10 @@
   
   </style>
   <h1>Listo para aprender a cocinar?<br><br><br><br><br></h1>
+      <%= @user.to_json%>
   <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/2484664.jpg?raw=true" border="1" width="600" height="200">
 
-  <br><br><br><br><a href="http://localhost:4567/question"><input type="button" name = "givquest" value="Dame la maldita pregunta!"><br><br>
+  <br><br><br><br><a href="http://localhost:4567/question/2"><input type="button" name = "givquest" value="Dame la maldita pregunta!"><br><br>
 
 </body>
 </html>
