--- a/cheftravel/views/question.erb
+++ b/cheftravel/views/question.erb
@@ -1,39 +1,85 @@
 <!DOCTYPE html>
 <html>
 <head>
-</head>
-<body>
-  
   <style>
-    body {
-      background-color: #f2f2f2;
-      text-align: center;
-      padding: 10px;
-    }
     
     img {
       max-width: 400px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
-  </style>
-  <h1>A ver qué tanto sabes sobre gastronomía Argentina, papá</h1>
-  <p><%= @question.text%></p>
-  <p><%= @users.to_json%></p>
-  
 
+    body {
+    background-color: #3b3f3c86;
+    text-align: center;
+    padding: 10px;
+    }
+
+    img {
+      max-width: 400px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    }
+
+    h1, h2, h3 {
+      font-family: 'Helvetica Neue', sans-serif;
+    }
+
+    p, label, input[type="submit"] {
+      font-family: 'Arial', sans-serif;
+    }
+
+    input[type="submit"] {
+      background-color: #4CAF50;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+    }
+
+    .result-message {
+      font-size: 30px;
+      font-weight: bold;
+      margin-top: 50px;
+    }
+
+  </style>
+  <script>
+    function goToNextQuestion() {
+      var currentId = parseInt(window.location.href.split("/").pop());
+      window.location.href = "http://localhost:4567/question/" + (currentId + 1);
+    }
+  </script>
+</head>
+<body>
+  <h1>A ver qué tanto sabes sobre gastronomía Argentina, papá</h1>
+  
+  <p><%= @users.name.to_json%></p>
   
   <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/milanga.jpg?raw=true" border="1" width="300" height="200">
-  <h2>Opciones:</h2>
   
-  <form action="/question/:id" method="POST">
-    <input type="submit" name="option" value="Tomate"><br><br>
-    <input type="submit" name="option" value="Jamon"><br><br>
-    <input type="submit" name="option" value="Queso"><br><br>
-    <input type="submit" name="option" value="Huevo"><br><br>
-  </form>
+  <main>
+      <h2><%= @question.text %></h2>
+      <form action="/question" method="POST">
+        <input type="hidden" name="question_id" value="<%= @question.id %>">
+        <% @answers.each do |answer| %>
+          <label>
+            <input type="radio" name="option_id" value="<%= answer.id %>">
+            <%= answer.text %>
+          </label><br>
+        <% end %>
+        <input type="submit" value="Responder">
+      </form>
+    </main>
+
+  <br><br>
   Te bancas otra o sos cagon?<br><br>
-  <a href="http://localhost:4567/question"><input type="button" name = "sig" value="Siguiente pregunta!"><br><br>
+  <button onclick="goToNextQuestion()">Siguiente pregunta!</button><br><br>
   
   <a href="http://localhost:4567/menu"><input type="button" name = "menu" value="Volver al menu">
 </body>
