points system & register system

--- a/cheftravel/views/menu.erb
+++ b/cheftravel/views/menu.erb
@@ -20,8 +20,11 @@
     
   
   </style>
-  <h1>Listo para aprender a cocinar?<br><br><br><br><br></h1>
-      <%= @user.to_json%>
+    <h1>Bienvenido <%= @@user.firstname.to_json%> a ChefTravel !!!</h1>
+    Tus puntos actuales son: <%= @@user.points.to_json%>
+
+  <h2>Listo para aprender a cocinar?<br><br><br><br><br></h2>
+    
   <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/2484664.jpg?raw=true" border="1" width="600" height="200">
 
   <br><br><br><br><a href="http://localhost:4567/question/2"><input type="button" name = "givquest" value="Dame la maldita pregunta!"><br><br>
