--- a/cheftravel/views/result.erb
+++ b/cheftravel/views/result.erb
@@ -52,8 +52,9 @@
 <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/2484664.jpg?raw=true" border="1" width="300" height="200">
 
 <h2 class="result-message"><%= result_message %></h2>
-<p>Tus puntos actuales son: <%=@@user.points.to_json%></p><br><br>
+<p>Puntos actuales: <%=@@user.points.to_json%></p><br><br>
 <a href="http://localhost:4567/question/<%=id+1%>"> <button>Siguiente pregunta!</button><br><br>
+  <a href="http://localhost:4567/menu"><button>Volver al menu</button><br><br>
 
 </body>
 </html>
