--- a/cheftravel/views/ranking.erb
+++ b/cheftravel/views/ranking.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>ChefRANKING</title>
   <style>
     body {
       background-color: #E0FFFF; /* Celeste claro */
@@ -72,19 +73,17 @@
       <th>Puntos</th>
     </tr>
 
-      <% @@userspoints.each do |user| %>
+    <% @@userspoints.each_with_index do |user, index| %>
       <tr>
-          <td> <%= @@n = @@n+1%></td>
-          <td> <%= @@usersname.find(@@n).to_json %></td>
-          <td> <%= @@userspoints.find(@@n).to_json %></td>
-        <% end %>
+        <td><%= index + 1 %></td>
+        <td><%= @@usersname[index].name %></td>
+        <td><%= user.points %></td>
       </tr>
-    </tr>
+    <% end %>
   </table>
 
-    <div class="ranking-izq">
-  <a href="http://localhost:4567/menu"><input type="submit" name = "menu" value="Volver al menu">
-    
+  <div class="ranking-izq">
+    <a href="http://localhost:4567/menu"><input type="submit" name="menu" value="Volver al menu"></a>
   </div>
 </body>
 </html>
