--- a/cheftravel/views/question.erb
+++ b/cheftravel/views/question.erb
@@ -31,7 +31,7 @@
     }
 
     input[type="submit"] {
-      background-color: #4CAF50;
+      background-color: #3b3f3cb7;
       border: none;
       color: white;
       padding: 10px 20px;
@@ -41,6 +41,7 @@
       font-size: 16px;
       margin: 4px 2px;
       cursor: pointer;
+      border-radius: 5%;
     }
 
     .result-message {
