--- a/cheftravel/views/ranking.erb
+++ b/cheftravel/views/ranking.erb
@@ -48,7 +48,7 @@
     }
 
     input[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #3b3f3cb7;
     border: none;
     color: white;
     padding: 10px 20px;
@@ -58,6 +58,7 @@
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 5%;
   }
   </style>
   
