--- a/cheftravel/views/result.erb
+++ b/cheftravel/views/result.erb
@@ -28,7 +28,7 @@
   }
 
   input[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #f2f2f2;
     border: none;
     color: white;
     padding: 10px 20px;
