--- a/cheftravel/views/fail_register.erb
+++ b/cheftravel/views/fail_register.erb
@@ -10,18 +10,22 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-    }      
+    }
+    .failmsg{
+      color: red;
+    }
 
     </style>
     <h1>Registrese en ChefTravel de manera gratuita</h1>
     <img src="https://raw.githubusercontent.com/eabalestra/AYDS-Project-2023/373c7a4561fbe5c015f89fad24eca296c4050d9c/cheftravel/public/cheftravel.png" border="0" width="200" height="200" class="centrar">
-    <p>Inserte sus datos a continuacion</p><br><br>
+    <p>Inserte sus datos a continuacion</p>
+    <p class="failmsg" color:red><%= @msgfail %></p><br><br><br>
     <form action="/registermenu" method="POST">
       <input type="text" name="firstname" placeholder="Nombre">
       <input type="text" name="lastname" placeholder="Apellido">
       <input type="text" name="email" placeholder="E-mail">
       <input type="text" name="name" placeholder="Nombre de usuario">
-      <input type="password" name="password" placeholder="Contraseña">
+      <input type="password" name="password" placeholder="Contraseña">  
       <input type="password" name="reppw" placeholder="Repita su contraseña">
       <button>Let's cook!</button><br>
 
