--- a/cheftravel/public/arg.css
+++ b/cheftravel/public/arg.css
@@ -5,7 +5,7 @@
 
 body{
   font-family: Arial, sans-serif;
-  background: url(https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/mar.jpg?raw=true);
+  background: url(https://raw.githubusercontent.com/eabalestra/AYDS-Project-2023/main/cheftravel/public/for_others/fondoparamenu.jpg);
   background-size: cover;
   background-position: center;
   
