--- a/cheftravel/views/argentina.erb
+++ b/cheftravel/views/argentina.erb
@@ -21,7 +21,7 @@
 
     <div id="contenedor">
       <div class="banner_img" >
-        <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/arg_png.png?raw=true">
+        <img src="https://raw.githubusercontent.com/eabalestra/AYDS-Project-2023/main/cheftravel/public/for_others/maparg.png">
       </div>
     </div>
 
