--- a/cheftravel/public/login.css
+++ b/cheftravel/public/login.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding : 0;
-  background: url() no-repeat center top;
+  background: url(https://raw.githubusercontent.com/eabalestra/AYDS-Project-2023/main/cheftravel/public/for_others/fondoLogin.jpeg) no-repeat center top;
   background-size: cover;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   height: 100vh;
