fix menu images

--- a/cheftravel/views/index.erb
+++ b/cheftravel/views/index.erb
@@ -3,7 +3,7 @@
   <head>
     <title>ChefTravel</title>
     <link rel="stylesheet" type="text/css" href="login.css">
-    <link rel="shortcut icon" href="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/fondoLogin.png?raw=true">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/eabalestra/AYDS-Project-2023/9b730cb40b82593e667bd9b70251ac136c17d2f6/cheftravel/public/for_others/fondoLogin.jpeg">
   </head>
   <body>
 
