--- a/cheftravel/views/argentina.erb
+++ b/cheftravel/views/argentina.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+
   <title>ChefTravel</title>
-  
+
   <link rel="stylesheet" type="text/css" href="arg.css">
   <script src="https://kit.fontawesome.com/8f53256014.js" crossorigin="anonymous"></script>
 </head>
@@ -21,7 +21,7 @@
 
     <div id="contenedor">
       <div class="banner_img" >
-        <img src="https://raw.githubusercontent.com/eabalestra/AYDS-Project-2023/main/cheftravel/public/for_others/maparg.png">
+        <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/arg_png.png?raw=true">
       </div>
     </div>
 
