--- a/cheftravel/views/argentina.erb
+++ b/cheftravel/views/argentina.erb
@@ -9,6 +9,19 @@
 </head>
 <body>
 
+    <style>
+        body {
+      background-image: url("https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/fondoparamenu.jpg?raw=true");
+      background-size: cover;
+      color: #fff;
+      font-family: 'Helvetica Neue', sans-serif;
+      text-align: center;
+      padding: 10px;
+    }
+
+    </style>
+
+
 		<nav>
 			<ul class="menu">
         <li><a href="#">Recetario</a></li>
