--- a/cheftravel/views/result.erb
+++ b/cheftravel/views/result.erb
@@ -8,7 +8,7 @@
 
 <style>
   body {
-    background-color: #f2f2f2;
+    background-image: linear-gradient(to right, #000b17, #000b17, #141452);
     text-align: center;
     padding: 10px;
   }
@@ -49,7 +49,7 @@
 
 
 
-<img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/2484664.jpg?raw=true" border="1" width="300" height="200">
+<img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/2484664.jpg?raw=true" border="1" width="300" height="200">
 
 <h2 class="result-message"><%= result_message %></h2>
 <p>Puntos actuales: <%=@@user.points.to_json%></p><br><br>
