--- a/cheftravel/public/login.css
+++ b/cheftravel/public/login.css
@@ -8,8 +8,8 @@ body {
 }
 
 .login-box {
-  width: 320px;
-  height: 420px;
+  width: 450px;
+  height: auto;
   background: #000;
   color: #fff;
   top: 50%;
