--- a/cheftravel/views/index.erb
+++ b/cheftravel/views/index.erb
@@ -9,7 +9,7 @@
 
     <div class="login-box">
       <img class="avatar" src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/chef_recortado.png?raw=true" alt="logo de cheftravel">
-      <h1> Login Here </h1>
+      <br><h1>Login</h1>
       <form action="/logmenu" method="POST">
         <!-- USERNAME-->
         <label for="username">Username</label>
@@ -19,7 +19,7 @@
         <label for="password">Password</label>
         <input type="password" name="password" placeholder="Enter password">
 
-        <input type="submit" value="Log in">
+        <input type="submit" value="Let's cook!">
 
         <form action="/register" method="GET">
           <a href="http://localhost:4567/register">No tienes cuenta? Registrate gratis!</a>
