implements sessions and fix some of bug

--- a/cheftravel/views/argentina.erb
+++ b/cheftravel/views/argentina.erb
@@ -26,8 +26,8 @@
 			<ul class="menu">
         <li><a href="#">Recetario</a></li>
         <li><a href="http://localhost:4567/ranking">Ranking</a></li>
-        <li><a href="#">Puntos: <%= @@user.points.to_json%></a></li>
-				<li><a href="#"><%= @@user.name%></a></li>
+        <li><a href="#">Puntos: <%= @user.points.to_json%></a></li>
+				<li><a href="#"><%= @user.name%></a></li>
 				<li><a href="http://localhost:4567/">Logout</a></li>
 			</ul>
 		</nav>
