--- a/cheftravel/views/nomorequest.erb
+++ b/cheftravel/views/nomorequest.erb
@@ -72,8 +72,8 @@
   <img src="" border="1" width="300" height="200"><br><br><br><br>
 
 
-    <p class="puntos-izq"> Puntos: <%= @@user.points.to_json%></p>
-    <p class="nombre-der">user: <%= @@user.name%></p>
+    <p class="puntos-izq"> Puntos: <%= @user.points.to_json%></p>
+    <p class="nombre-der">user: <%= @user.name%></p>
   
   <a href="http://localhost:4567/menu"><input type="submit" name = "menu" value="Volver al menu">
   </div>
