--- a/cheftravel/views/result.erb
+++ b/cheftravel/views/result.erb
@@ -52,7 +52,7 @@
 <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/2484664.jpg?raw=true" border="1" width="300" height="200">
 
 <h2 class="result-message"><%= result_message %></h2>
-<p>Puntos actuales: <%=@@user.points.to_json%></p><br><br>
+<p>Puntos actuales: <%=@user.points.to_json%></p><br><br>
 <a href="http://localhost:4567/question/<%=id+1%>"> <button>Siguiente pregunta!</button><br><br>
   <a href="http://localhost:4567/menu"><button>Volver al menu</button><br><br>
 
