implement logout, fix ranking, fix user not select answer, add profile

--- a/cheftravel/views/argentina.erb
+++ b/cheftravel/views/argentina.erb
@@ -28,7 +28,8 @@
         <li><a href="http://localhost:4567/ranking">Ranking</a></li>
         <li><a href="#">Puntos: <%= @user.points.to_json%></a></li>
 				<li><a href="#"><%= @user.name%></a></li>
-				<li><a href="http://localhost:4567/">Logout</a></li>
+        <li><a href="http://localhost:4567/profile">Profile</a></li>
+				<li><a href="http://localhost:4567/logout">Logout</a></li>
 			</ul>
 		</nav>
 
