--- a/cheftravel/views/menu.erb
+++ b/cheftravel/views/menu.erb
@@ -4,23 +4,8 @@
 
   <title>ChefTravel</title>
 
-  <link rel="stylesheet" type="text/css" href="arg.css">
-  <script src="https://kit.fontawesome.com/8f53256014.js" crossorigin="anonymous"></script>
-</head>
+  <link rel="stylesheet" type="text/css" href="arg.css"></head>
 <body>
-
-    <style>
-        body {
-      background-image: url("https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/fondoparamenu.jpg?raw=true");
-      background-size: cover;
-      color: #fff;
-      font-family: 'Helvetica Neue', sans-serif;
-      text-align: center;
-      padding: 10px;
-    }
-
-    </style>
-
 
 		<nav>
 			<ul class="menu">
@@ -39,6 +24,8 @@
       </div>
     </div>
 
-<a href="http://localhost:4567/question/1"><button class="button">Level 1</button>
+<a href="http://localhost:4567/level/16"><button class="button">Level 1</button>
+<a href="http://localhost:4567/level/17"><button class="button">Level 2</button>
+<a href="http://localhost:4567/level/18"><button class="button">Level 3</button>
 </body>
 </html>
