--- a/cheftravel/public/arg.css
+++ b/cheftravel/public/arg.css
@@ -3,12 +3,13 @@
   padding: 0;
 }
 
-body{
-  font-family: Arial, sans-serif;
-  background: url(https://raw.githubusercontent.com/eabalestra/AYDS-Project-2023/9b730cb40b82593e667bd9b70251ac136c17d2f6/cheftravel/public/for_others/fondoparamenu.jpg);
+body {
+  background-image: url("https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/fondoparamenu.jpg?raw=true");
   background-size: cover;
-  background-position: center;
-
+  color: #fff;
+  font-family: 'Helvetica Neue', sans-serif;
+  text-align: center;
+  padding: 10px;
 }
 
 #contenedor{
@@ -55,21 +56,6 @@ nav {
 .menu li a:hover {
   background-color: #555;
   border-radius: 5px;
-}
-
-.button {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  background-color: rgb(0, 0, 0);
-  color: white;
-  border: 1;
-  cursor: pointer;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
-  transition: all .4s ease-in-out;
-  position: fixed;
-  left: 950px;
-  bottom: 65px;
 }
 
 
