--- a/cheftravel/views/question.erb
+++ b/cheftravel/views/question.erb
@@ -119,7 +119,7 @@
   </style>
 </head>
 <body>
-  <h1>LEVEL 1</h1>
+  <h1>Nivel <%= @level.id %>: cocinemos <%= @level.name %> !</h1>
   
   <img src="<%= @question.link_imagen %>" border="1" width="300" height="200">
   
