--- a/cheftravel/views/result.erb
+++ b/cheftravel/views/result.erb
@@ -56,7 +56,7 @@
 
 <h2 class="result-message"><%= result_message %></h2>
 <p>Puntos actuales: <%=@user.points.to_json%></p><br><br>
-<a href="http://localhost:4567/question/<%=id+1%>"> <button>Siguiente pregunta!</button><br><br>
+<a href="http://localhost:4567/level/<%=id_level%>/question/<%=id_question+1%>"> <button>Siguiente pregunta!</button><br><br>
   <a href="http://localhost:4567/menu"><button>Volver al menu</button><br><br>
 
 </body>
