more levels and questions

--- a/cheftravel/views/menu.erb
+++ b/cheftravel/views/menu.erb
@@ -24,8 +24,10 @@
       </div>
     </div>
 
-<a href="http://localhost:4567/level/16"><button class="button">Level 1</button>
-<a href="http://localhost:4567/level/17"><button class="button">Level 2</button>
-<a href="http://localhost:4567/level/18"><button class="button">Level 3</button>
+<a href="http://localhost:4567/level/16"><button class=" buttonlevel1">Level 1</button>
+<a href="http://localhost:4567/level/17"><button class="buttonlevel2">Level 2</button>
+<a href="http://localhost:4567/level/18"><button class="buttonlevel3">Level 3</button>
+<a href="http://localhost:4567/level/19"><button class="buttonlevel4">Level 4</button>
+<a href="http://localhost:4567/level/20"><button class="buttonlevel5">Level 5</button>
 </body>
 </html>
