fix variables and fix some of bugs

--- a/cheftravel/views/fail_login.erb
+++ b/cheftravel/views/fail_login.erb
@@ -31,7 +31,7 @@
         <input type="submit" value="Let's cook!">
         <form action="/register" method="GET">
           <a href="http://localhost:4567/register">No tienes cuenta? Registrate gratis!</a>
-                  <p class="failmsg"><%= @msg %></p>
+                  <p class="failmsg"><%= msg %></p>
 
         </form>
       </form>
