--- a/cheftravel/views/fail_register.erb
+++ b/cheftravel/views/fail_register.erb
@@ -53,7 +53,7 @@
         <input type="password" name="reppw" placeholder="Repita su Contraseña">
 
         <input type="submit" value="Let's cook!">
-        <p class="failmsg"><%= @msgfail %></p>
+        <p class="failmsg"><%= msgfail %></p>
       </form>
         <a href="http://localhost:4567/"><input type="submit" value="Volver al login">
     </div>
