firsts 3 levels & frontera chile

--- a/cheftravel/views/menu.erb
+++ b/cheftravel/views/menu.erb
@@ -27,7 +27,6 @@
 <a href="http://localhost:4567/level/1"><button class=" buttonlevel1">Level 1</button>
 <a href="http://localhost:4567/level/2"><button class="buttonlevel2">Level 2</button>
 <a href="http://localhost:4567/level/3"><button class="buttonlevel3">Level 3</button>
-<a href="http://localhost:4567/level/4"><button class="buttonlevel4">Level 4</button>
-<a href="http://localhost:4567/level/5"><button class="buttonlevel5">Level 5</button>
+<a href="http://localhost:4567/level/1000"><button class="buttonlevel4">Frontera a Chile</button>
 </body>
 </html>
